--- a/packages/atomic/src/components/search/atomic-result-fields-list/atomic-result-fields-list.mdx
+++ b/packages/atomic/src/components/search/atomic-result-fields-list/atomic-result-fields-list.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/addon-docs/blocks';
-import * as AtomicResultFieldsListStories from './atomic-result-field-list.new.stories';
+import * as AtomicResultFieldsListStories from './atomic-result-fields-list.new.stories';
 import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 
@@ -8,14 +8,13 @@ import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-te
 <AtomicDocTemplate
   stories={AtomicResultFieldsListStories}
   githubPath="search/atomic-result-fields-list/atomic-result-fields-list.ts"
+  tagName="atomic-result-fields-list"
   className="AtomicResultFieldsList"
 >
 
 The `atomic-result-fields-list` component selectively renders its children to ensure they fit the parent element and adds dividers between them.
 
 This component is useful for displaying a list of result fields that adapts to the available space, automatically hiding overflow fields when necessary.
-
-### Basic Usage
 
 Use inside an `atomic-result-template` to display multiple fields with automatic overflow handling:
 
@@ -26,20 +25,40 @@ Use inside an `atomic-result-template` to display multiple fields with automatic
     <atomic-result-template>
       <template>
         <atomic-result-fields-list>
-          <span class="field">
-            <span class="field-label">Author:</span>
-            <atomic-result-text field="author"></atomic-result-text>
-          </span>
+               <style>
+        .field {
+          display: inline-flex;
+          white-space: nowrap;
+          align-items: center;
+        }
+        .field-label {
+          font-weight: bold;
+          margin-right: 0.25rem;
+        }
+      </style>
+      <span class="field">
+        <span class="field-label"><atomic-text value="author"></atomic-text>:</span>
+        <atomic-result-text field="author"></atomic-result-text>
+      </span>
 
-          <span class="field">
-            <span class="field-label">Source:</span>
-            <atomic-result-text field="source"></atomic-result-text>
-          </span>
+      <span class="field">
+        <span class="field-label"><atomic-text value="source"></atomic-text>:</span>
+        <atomic-result-text field="source"></atomic-result-text>
+      </span>
 
-          <span class="field">
-            <span class="field-label">Date:</span>
-            <atomic-result-date></atomic-result-date>
-          </span>
+      <span class="field">
+        <span class="field-label"><atomic-text value="language"></atomic-text>:</span>
+        <atomic-result-multi-value-text field="language"></atomic-result-multi-value-text>
+      </span>
+
+      <span class="field">
+        <span class="field-label"><atomic-text value="fileType"></atomic-text>:</span>
+        <atomic-result-text field="filetype"></atomic-result-text>
+      </span>
+
+      <span class="field">
+        <span class="field-label">Date:</span>
+      </span>
         </atomic-result-fields-list>
       </template>
     </atomic-result-template>
