--- a/packages/atomic/src/components/search/atomic-did-you-mean/atomic-did-you-mean.mdx
+++ b/packages/atomic/src/components/search/atomic-did-you-mean/atomic-did-you-mean.mdx
@@ -9,6 +9,7 @@ import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/ato
   githubPath="search/atomic-did-you-mean/atomic-did-you-mean.ts"
   tagName="atomic-did-you-mean"
   className="AtomicDidYouMean"
+  defaultStory="WithAutomaticQueryCorrection"
 >
 This component is typically placed within the "status" section of the layout.
 
@@ -35,17 +36,5 @@ The relevance of the corrections improves with the size of the index, as more te
 It's possible to define certain phrases or terms in an organization’s thesaurus, which will expand or replace the query expression before executing the query.
 However, the _Did You Mean_ component won’t process queries expanded by the thesaurus.
 
-
-### Common Use Cases
-* When a query returns no results but finds a possible query correction, the component automatically triggers a new query with the suggested term. This prevents the user having to rewrite their query, which saves them time.
-* When the current query returns results, but the index has more frequently occurring terms with similar spelling, the component presents a link containing the new terms.
-When clicked, the link triggers a new query using the corrected keywords.
-* A soft nudge asking users if that's what they meant can direct them to the most relevant results.
-
-## Reference
-
-<a href="https://uxmag.com/articles/designing-search-staying-on-track" target="_blank">Designing Search: Staying on Track</a>
-<br/>
-<a href="https://www.google.com/search?q=guitr&oq=guitr&aqs=chrome..69i57j0i10i433l3j69i60j69i65j69i60l2.538j0j7&sourceid=chrome&ie=UTF-8" target="_blank">Searching "guitr" with Google</a>
 
 </AtomicDocTemplate>
