--- a/packages/atomic/src/components/search/atomic-facet/atomic-facet.mdx
+++ b/packages/atomic/src/components/search/atomic-facet/atomic-facet.mdx
@@ -29,4 +29,33 @@ More info here: [atomic-facet-manager](https://docs.coveo.com/en/2918).
   </atomic-search-layout>
 </atomic-search-interface>
 ```
+
+### Display Options
+
+The facet component supports three different display modes by setting the `display-value-as` attribute:
+
+- `checkbox` (default): Display facets as checkboxes.
+This is the most commonly used display and itallows multiple selections.
+- `link`: Display facets as links.
+Single selection only, behaves like navigational links.
+- `box`: Display facets as boxes.
+Multi-select with a more visual appearance, presents more values in compact space.
+
+### Common Use Cases
+
+Facets are useful for large indexes because they provide multiple filters, one for every specific aspect of the content. 
+Faceted navigation helps the user get an overview of the content available, helping them understand how to search for it.
+
+## UX Best Practices
+
+- If you facet values are are long, consider setting `display-values-as` to `link`.
+Otherwise you you risk truncating values when they are displayed to users.
+- It's recommended to use `<atomic-layout-section section="facets">` to control the display of your facets, which will place facets on the left side
+  of the search page.
+- Enabling facet search can help find specific values inside larger sets.
+
+## Reference
+
+[Don’t Lose Face with Facets](https://source.coveo.com/2018/04/18/facets/).
+
 </AtomicDocTemplate>
