chore: seed all picsum pictures

--- a/packages/atomic/src/components/search/atomic-result-template/atomic-result-template.mdx
+++ b/packages/atomic/src/components/search/atomic-result-template/atomic-result-template.mdx
@@ -23,7 +23,7 @@ Example using the `atomic-result-list`:
   <atomic-result-template>
     <template>
       <atomic-result-section-visual>
-        <atomic-result-image field="ytthumbnailurl" fallback="https://picsum.photos/350"></atomic-result-image>
+        <atomic-result-image field="ytthumbnailurl" fallback="https://picsum.photos/seed/picsum/350"></atomic-result-image>
       </atomic-result-section-visual>
       
       <atomic-result-section-badges>
