--- a/packages/atomic/src/components/search/atomic-result-children-template/atomic-result-children-template.mdx
+++ b/packages/atomic/src/components/search/atomic-result-children-template/atomic-result-children-template.mdx
@@ -23,7 +23,7 @@ Example using `atomic-result-children` with `atomic-folded-result-list`:
   <atomic-result-template>
     <template>
       <atomic-result-section-visual>
-        <atomic-result-image field="ytthumbnailurl" fallback="https://picsum.photos/350"></atomic-result-image>
+        <atomic-result-image field="ytthumbnailurl" fallback="https://picsum.photos/seed/picsum/350"></atomic-result-image>
       </atomic-result-section-visual>
       
       <atomic-result-section-title>
@@ -39,7 +39,7 @@ Example using `atomic-result-children` with `atomic-folded-result-list`:
           <atomic-result-children-template>
             <template>
               <atomic-result-section-visual>
-                <atomic-result-image field="ytthumbnailurl" fallback="https://picsum.photos/350"></atomic-result-image>
+                <atomic-result-image field="ytthumbnailurl" fallback="https://picsum.photos/seed/picsum/350"></atomic-result-image>
               </atomic-result-section-visual>
               
               <atomic-result-section-title>
